--- a/main.html
+++ b/main.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="project-card" data-project-id="2">
-                <img src="https://via.placeholder.com/400" alt="Kokoro Dojo App">
+                <img src="media/koko1.png" alt="Kokoro Dojo App">
                 <div class="project-info">
                     <h3>Kokoro Dojo App</h3>
                     <p class="italic-text">A Flutter-based martial arts app using AI-powered posture analysis to guide users in training techniques. Final year project.</p>
@@ -212,7 +212,7 @@
                 title: "Kokoro Dojo App",
                 description: "A Flutter-based martial arts training app built as a final year project. Integrates an AI posture analysis model that evaluates users' training techniques. Firebase handles user data and app backend. This project is currently under development.",
                 technologies: ["Flutter", "Dart", "Firebase", "AI", "Python", "Machine Learning"],
-                video: "media/kokoro1.mp4"
+                image: "media/koko1.png"
             },
             {
                 title: "American Sign Language Detection",
